Made some updates.

--- a/eshell/history
+++ b/eshell/history
@@ -53,3 +53,14 @@ cd ../Desktop/processingBox
 browse-url-of-file
 gatsby develop
 gatsby develop
+cd ../
+cd ../
+cd ../
+cd ../
+cd //
+cd ..
+ls
+ cd Users
+ls
+cd neil/Downloads
+ls
